--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
       <div class="container-fluid" data-aos="fade-up">
         <div class="section-header">
           <h3 class="section-title">About Us</h3>
+          <style>
+            
+          </style>
           <span class="section-divider"></span>
           <p class="section-description">
             FajarJayaStoreindo berdiri sejak 2021, bergerak dipenjualan alas kaki dan<br>
@@ -182,42 +185,7 @@
     </section><!-- End Call To Action Section -->
 
 
-    <!-- ======= Clients Section ======= -->
-    <section id="clients">
-      <div class="container" data-aos="fade-up">
-
-        <div class="row">
-
-          <div class="col-md-2">
-            <img src="assets/img/clients/client-1.png" alt="">
-          </div>
-
-          <div class="col-md-2">
-            <img src="assets/img/clients/client-2.png" alt="">
-          </div>
-
-          <div class="col-md-2">
-            <img src="assets/img/clients/client-3.png" alt="">
-          </div>
-
-          <div class="col-md-2">
-            <img src="assets/img/clients/client-4.png" alt="">
-          </div>
-
-          <div class="col-md-2">
-            <img src="assets/img/clients/client-5.png" alt="">
-          </div>
-
-          <div class="col-md-2">
-            <img src="assets/img/clients/client-6.png" alt="">
-          </div>
-
-        </div>
-      </div>
-    </section><!-- End Clients Section -->
-
-
-
+    
 <!-- ======= Team Section ======= -->
 <section id="team" class="section-bg">
   <div class="container" data-aos="fade-up">
@@ -309,7 +277,7 @@
     <div class="row">
       <div class="col-lg-4 col-md-4">
         <div class="contact-about">
-          <h3>FAJARJAYASTORE</h3>
+          <h3>FAJARJAYASTORE</h3><br>
           <p>Membawa inovasi dan kualitas dalam setiap langkah kami. Kami bangga memberikan layanan yang menginspirasi dan solusi terbaik untuk kebutuhan bisnis Anda.</p>
           <div class="social-links">
             <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
@@ -321,7 +289,7 @@
         </div>
       </div>
 
-      <div class="col-lg-3 col-md-4">
+      <div class="col-lg-4 col-md-4">
         <div class="info">
           <div>
             <i class="bi bi-geo-alt"></i>
