--- a/index.html
+++ b/index.html
@@ -21,13 +21,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Avilon
-  * Template URL: https://bootstrapmade.com/avilon-bootstrap-landing-page-template/
-  * Updated: Mar 17 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+  
 </head>
 
 <body>
@@ -37,7 +31,7 @@
     <div class="container d-flex justify-content-between align-items-center">
 
       <div id="logo">
-        <h1><a href="index.html">FajarJayaStore</a></h1>
+        <h1><a href="index.html">FajarJayaStorindo</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt=""></a> -->
       </div>
@@ -64,8 +58,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-text" data-aos="zoom-out">
-      <h2>Selamat Datang di Website resmi FajarJayaStoreindo</h2>
-      <p>Website resmi FajarJayaStoreindo</p>
+      <h2>Selamat Datang di Website resmi FajarJayaStorindo</h2>
+      <p>Website resmi FajarJayaStorindo</p>
       <a href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section>
@@ -83,7 +77,7 @@
           </style>
           <span class="section-divider"></span>
           <p class="section-description">
-            FajarJayaStoreindo berdiri sejak 2021, bergerak dipenjualan alas kaki dan<br>
+            FajarJayaStorindo berdiri sejak 2021, bergerak dipenjualan alas kaki dan<br>
             best produk boot di online dan corporate.
           </p>
         </div>
@@ -95,7 +89,7 @@
 
           <div class="col-lg-6 content" data-aos="fade-left" dat-aos-delay="100">
             <h2>Senang bertemu dengan anda,</h2>
-            <h3>FajarJayaStoreindo .</h3>
+            <h3>FajarJayaStorindo .</h3>
             <p> Di tempat kami terdapat 3 cabang untuk memesan online ataupun offline.
                 Berikut tokonya.
             </p>
